[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/big_zombie_run_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/big_zombie_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Enemies/big_zombie_run_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Enemies/big_zombie_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://Enemies/big_zombie_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://Enemies/big_zombie_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Enemies/big_zombie_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://Enemies/big_zombie_idle_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://Enemies/FirstBigBoss.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run_fast",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.98106, 11.8177 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.6353, 12.5835 )

[node name="Node2D" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
z_index = 1
frames = SubResource( 1 )
animation = "Run_fast"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, 4.8357 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]
position = Vector2( 0.297302, 4.0879 )
scale = Vector2( 1, 1.3196 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 0.0619907, 2.58346 )
shape = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="KinematicBody2D"]
one_shot = true

[node name="AttTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="KinematicBody2D/DamageTimer" to="KinematicBody2D" method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="KinematicBody2D/AttTimer" to="KinematicBody2D" method="_on_AttTimer_timeout"]
